[package]
name = "device-tree"
version = "0.1.0"
edition = "2021"
authors = ["Neil Allavarpu"]
description = "Parsing for device tree blobs"
keywords = ["device tree", "device tree blob"]
categories = ["parsing", "bare-metal"]

[features]
rpi = []

[lib]
name = "device_tree"

[dependencies.num-traits]
version = "0.2.17"
default-features = false
